# cdbapi

./: .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Build.targets  README.md  cdbapi++.slnx  cdbapi.vcxproj  cdbapi.vcxproj.filters  vcpkg-configuration.json  vcpkg.json
data/: N36_W113_dem.tif.aux.xml
examples/: create_cdb.cc  gdal_test.cc  roundtrip.cc
include/cdbapi/: application_profile.h  cdbapi.h  datastore.h  error.h
include/cdbapi/coverage/: coverage.h  coverage_metadata.h  coverage_writer.h
include/cdbapi/crs/: crs.h
include/cdbapi/format/: geopackage_writer.h  geotiff_writer.h  jpeg2000_writer.h  png_writer.h
include/cdbapi/link/: link.h
include/cdbapi/metadata/: dataset_metadata.h  global_metadata.h  version_info.h
include/cdbapi/path/: naming_convention.h  path_builder.h
include/cdbapi/tiling/: cdb1_global_grid.h  coalescence.h  geocell.h  tile_address.h  tiling_scheme.h
src/: application_profile.cc  datastore.cc
src/crs/: crs.cc
src/format/: geopackage_writer.cc  geotiff_writer.cc  jpeg2000_writer.cc  png_writer.cc
src/metadata/: dataset_metadata.cc  global_metadata.cc  version_info.cc
src/path/: naming_convention.cc  path_builder.cc
src/tiling/: cdb1_global_grid.cc  coalescence.cc  geocell.cc  tile_address.cc
tests/: CMakeLists.txt  cdbapi_tests.vcxproj  coalescence_test.cc  coverage_write_test.cc  format_writer_test.cc  geocell_test.cc  path_builder_test.cc  read_test.cc  smoke_test.cc  tiling_test.cc
